# LSTM-Options-Pricing

./: .gitignore  All Results_2.xlsx  LICENSE  Postprocessing.ipynb  Preprocessing.ipynb  README.md  black_scholes.py  bs_and_heston_predictions.ipynb  combine_raw_results.py  heston.py  main.py  monthly_call_scaler_scale_offset_tuples.pkl  pyproject.toml  train.py  vix_chart.ipynb
.github/: copilot-instructions.md
checkpoints/mlp/: 2023_01.pt  2023_01_results.csv  2023_02.pt  2023_02_results.csv  2023_03.pt  2023_03_results.csv  2023_04.pt  2023_04_results.csv  2023_05.pt  2023_05_results.csv  2023_06.pt  2023_06_results.csv  2023_07.pt  2023_07_results.csv  2023_08.pt  2023_08_results.csv  2023_09.pt  2023_09_results.csv  2023_10.pt  2023_10_results.csv  2023_11.pt  2023_11_results.csv  2023_12.pt  2023_12_results.csv  all_results.csv
checkpoints/mlp_GG/: 2023_01.pt  2023_01_results.csv  2023_02.pt  2023_02_results.csv  2023_03.pt  2023_03_results.csv  2023_04.pt  2023_04_results.csv  2023_05.pt  2023_05_results.csv  2023_06.pt  2023_06_results.csv  2023_07.pt  2023_07_results.csv  2023_08.pt  2023_08_results.csv  2023_09.pt  2023_09_results.csv  2023_10.pt  2023_10_results.csv  2023_11.pt  2023_11_results.csv  2023_12.pt  2023_12_results.csv  all_results.csv
checkpoints/mlp_normal/: 2023_01.pt  2023_01_results.csv  2023_02.pt  2023_02_results.csv  (+21 more)
models/: __init__.py  mlp.py  pimentel_mlp.py
tests/: test_black_scholes.py  test_heston.py
transformers/: Transformers.ipynb  batch_train.py  batch_train.sh  requirements.txt  runner.sh  train.py  train.sh
(+2774 files in other folders)
